--- a/package.json
+++ b/package.json
@@ -36,5 +36,8 @@
     "eslint-config-airbnb-base": "^12.0.0",
     "eslint-plugin-import": "^2.7.0",
     "mocha": "^3.5.3"
+  },
+  "dependencies": {
+    "commander": "^2.11.0"
   }
 }
