--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "mocha": "^5.2.0"
   },
   "dependencies": {
-    "commander": "^2.11.0"
+    "commander": "^2.11.0",
+    "inquirer": "^6.2.0"
   }
 }
