--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
   },
   "dependencies": {
     "commander": "^2.11.0",
-    "inquirer": "^6.2.0"
+    "handlebars": "^4.0.12",
+    "inquirer": "^6.2.0",
+    "metalsmith": "^2.3.0"
   }
 }
