add: chalk module

--- a/package.json
+++ b/package.json
@@ -38,9 +38,11 @@
     "mocha": "^5.2.0"
   },
   "dependencies": {
+    "chalk": "^2.4.1",
     "commander": "^2.11.0",
     "handlebars": "^4.0.12",
     "inquirer": "^6.2.0",
+    "log-symbols": "^2.2.0",
     "metalsmith": "^2.3.0"
   }
 }
